@@ -54,7 +54,7 @@ class Task(TaskletMixin):
     store = None
     # __slots__ = ('name', 'f', 'args', 'kwargs', '_hash','_lock')
     def __init__(self, f, *args, **kwargs):
-        if f.func_name == '<lambda>':
+        if getattr(f, 'func_name', '') == '<lambda>':
             raise ValueError('''jug.Task does not work with lambda functions!
 
 Write an email to the authors if you feel you have a strong reason to use them (they are a bit
