@@ -1,0 +1,4 @@
+from jug import TaskGenerator
+import numpy as np
+array = TaskGenerator(np.array)
+a8 = array(range(8))
