@@ -1,6 +1,8 @@
 from nose.tools import with_setup
 import jug.task
 from jug.backends.dict_store import dict_store
+from jug.tests.task_reset import task_reset
+from jug.tests.utils import simple_execute
 
 Task = jug.task.Task
 jug.task.Task.store = dict_store()
@@ -259,3 +261,10 @@ def test_unload_recursive_tuple():
     T3.unload_recursive()
     assert not hasattr(T0, '_result')
 
+@task_reset
+def test_builtin_function():
+    import numpy as np
+    store, space = jug.jug.init('jug/tests/jugfiles/builtin_function.py', 'dict_store')
+    simple_execute()
+    a8 = jug.task.value(space['a8'])
+    assert np.all(a8 == np.arange(8))
