@@ -4,6 +4,7 @@ version 0.9.2+
 	(patch by Alcides Viamontes)
 	* Allow regex in invalidate command (patch by Alcides Viamontes)
 	* Add --cache --clear suboption to status
+	* Allow builtin functions for tasks
 
 version 0.9.2 Sun Nov 4 2012 by luispedro
 	* More flexible mapreduce()/map() functions
